Added to application.conf for heroku deployment.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,1 +1,6 @@
 # https://www.playframework.com/documentation/latest/Configuration
+play.http.secret.key="J:UgqQCt92no5Rv`N0JZF_iip@JcA?Zp:BC<FbVJq?<U8OZya7RQ?atBBKz[68_2"
+
+play.filters.hosts {
+  allowed= ["."]
+}
